# chess-variants-rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
chess_boards/: Z-BoardFileFormat  classic_chess.txt
chess_pieces/: Bishop.txt  King.txt  Knight.txt  Pawn.txt  Queen.txt  Rook.txt
src/: chess.rs  chess_game.rs  events.rs  main.rs  sdl_error.rs
src/chess/: PieceFileFormat.txt  board.rs  board_space.rs  chess_grid.rs  game_piece.rs  grid.rs  gridsquare.rs  new_piece.rs  old_piece_factory.rs  piece.rs  piece_catalog.rs  piece_factory.rs
src/chess/pieces/: Bishop  King  Knight.txt  Pawn  Queen  Rook  Setup
src/chess_game/: board.rs  board_space.rs  chess_textures.rs  game_piece.rs  new_piece.rs  piece.rs  piece_catalog.rs  piece_move.rs  texture_registry.rs
src/chess_game/board/: move_data.rs
src/gfx/: button.rs  mod.rs  widget.rs
