[package]
name = "chess-variants-rust"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7"
regex = "1.3"
lazy_static = "1.4"

[dependencies.sdl2]
version = "*"
features = ["image", "ttf", "mixer"]
