[package]
name = "chess-variants-rust"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7"
regex = "1.4"
lazy_static = "1.4"
thiserror = "1.0"
enum_derive = "0.1"
macro-attr = "0.2"

[dependencies.sdl2]
version = "0.34"
features = ["image", "ttf", "mixer"]
